# rtgj

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json
cmake/: dependencies.cmake  spdlog.cmake  volk.cmake
docs/superpowers/plans/: 2026-05-17-m0-bring-up.md  2026-05-18-logger.md
docs/superpowers/specs/: 2026-05-17-vulkan-renderer-design.md  2026-05-18-logger-design.md
src/: main.cpp  platform.hpp  platform_win32.cpp
src/core/: logger.cpp  logger.hpp
src/platform/: platform.hpp  platform_win32.cpp
src/renderer/: renderer.hpp  renderer_vk.cpp
src/vulkan/: types.hpp  utils.hpp
